--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <title> Sam Morton </title>
-    <meta name="personal website" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <meta name="TnT-Site" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@600&family=Poppins:wght@300&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="main"></div>
