--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <title> Sam Morton </title>
     <meta name="TnT-Site" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@600&family=Poppins:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@600&family=Poppins:wght@300&display=swap&family=IBM+Plex+Serif:wght@300&display=swap&family=Oswald&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="main"></div>
